--- a/index.html
+++ b/index.html
@@ -2,32 +2,79 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Photo Gallery</title>
+    <title>Basic Titles</title>
+
+    <style type="text/css">
+        td, th { border: 1px solid #CCC; }
+        table {border: 1px solid black; }
+    </style>
 </head>
-<h1>Photo Gallery: The Legendary Cast of 30 Rock</h1>
-
-
+<h1> Basic Titles</h1>
 <body>
-<p><a href="image1.html"> <img src="img/thumb-liz.png" alt="Liz Lemon" width="150" height="150"></a>
-This is Liz Lemon, the main protagonist in 30 Rock. She is the writer of her show called
-    "TGS". She is quirky and strange and, in real life, te actual writer of 30 Rock
+<table>
+    <tr>
+        <td>Cat</td>
+        <td>Salmon</td>
+    </tr>
 
+    <tr>
+        <td>Horse</td>
+        <td>Orca</td>
 
-<p><a href="image2.html"> <img src="img/thumb-jack.png" alt="Jack Donaghy" width="150" height="150"></a>
-This is Jack Donaghy, the president of NBC Network as well as GE. He is also Liz lemon's boss
-and close friend.
+    </tr>
+    <tr>
+        <td>Dragon</td>
+        <td>Chameleon</td>
+    </tr>
+    </table>
+<br>
 
-<p><a href="image3.html"> <img src="img/thumb-jenna.png" alt="Jenna Maroney" width="150" height="150">
-</a>Jenna Maroney is a cast member of Liz Lemon's sketch comedy show TGS. Jenna is notoriously crazy
-    as well as vain.
+<table>
 
-<p><a href="image4.html"> <img src="img/thumb-tracy.png" alt="Tracy Jordan" width="150" height="150"></a>
-Tracy Jordan is the other cast member of TGS. He is known for his strangeness and his riches.
-    At one point in the show he EGOT's after doing a more serious film.
+    <tr>
+        <th>Rank in Size</th>
+        <th>State Name</th>
+        <th>State Capital</th>
+    </tr>
 
-
-<p><a href="image5.html"> <img src="img/thumb-kenneth.png" alt="Kenneth Parcel" width="150" height="150"></a>
-<p> Kenneth Parcel is an NBC page who works for TGS. His age is a constant unidentified number and there are many references that
-he is immortal. He is from the deep south.</p>
+    <tr>
+        <td>#1</td>
+        <td>Alaska</td>
+        <td>Juneau</td>
+    </tr>
+    <tr>
+        <td>#2</td>
+        <td>Texas</td>
+        <td>Houston</td>
+    </tr>
+    <tr>
+        <td>#3</td>
+        <td>California</td>
+        <td>Sacramento</td>
+    </tr>
+    <tr>
+        <td>#4</td>
+        <td>Montana</td>
+        <td>Helena</td>
+    </tr>
+    <tr>
+        <td>#5</td>
+        <td>New Mexico</td>
+        <td>Santa Fe</td>
+    </tr>
+</table>
+<br>
+<table>
+    <tr>
+        <th>Monday</th>
+        <th>Tuesday</th>
+        <th>Wednesday</th>
+        <th>Thursday</th>
+        <th>Friday</th>
+        <th>Saturday</th>
+        <th>Sunday</th>
+    </tr>
+</table>
+<br>
 </body>
 </html>
