--- a/fonts/index.html
+++ b/fonts/index.html
@@ -30,7 +30,27 @@
         .couriernew {
             font-family: "Courier New", sans-serif;
         }
-
+        .centurygothic {
+            font-family: "Century Gothic";
+        }
+        .comicsans {
+            font-family: "Comic Sans", "Comic Sans MS";
+        }
+        .verdana {
+            font-family: Verdana;
+        }
+        .georgia {
+            font-family: Georgia;
+        }
+        .trebuchet {
+            font-family: "Trebuchet MS";
+        }
+        .lucida {
+            font-family: "Lucida Grande";
+        }
+        .palatino {
+            font-family: Palatino;
+        }
     </style>
 </head>
 <body>
@@ -47,42 +67,39 @@
         <td class="timesnewroman">Times New Roman</td>
         <td class="timesnewroman">This serif font is the default for many web browsers.</td>
     </tr>
-
     <tr>
         <td class="couriernew">Courier New</td>
         <td class="couriernew">This is a monospace font that resembles a typewriter.</td>
     </tr>
-
     <tr>
-        <td class="lobster">Verdana</td>
-        <td class="lobster">This font is similar to Arial but renders a little larger.</td>
+        <td class="verdana">Verdana</td>
+        <td class="verdana">This font is similar to Arial but renders a little larger.</td>
+    </tr>
+    <tr>
+        <td class="trebuchet">Trebuchet MS</td>
+        <td class="trebuchet">This font is often used for large headlines.</td>
+    </tr>
+    <tr>
+        <td class="georgia">Georgia</td>
+        <td class="georgia">This font is similar to Times New Roman but renders larger.</td>
+    </tr>
+    <tr>
+        <td class="centurygothic">Century Gothic</td>
+        <td class="centurygothic">This font is popular for headlines but not advised for main text.</td>
+    </tr>
+    <tr>
+        <td class="lucida">Lucida Sans Unicode</td>
+        <td class="lucida">This Lucida family of fonts is best known for its use in Macs.</td>
     </tr>
 
     <tr>
-        <td class="lobster">Trebuchet MS</td>
-        <td class="lobster">This font is often used for large headlines.</td>
-    </tr>
-    <tr>
-        <td class="lobster">Georgia</td>
-        <td class="lobster">This font is similar to Times New Roman but renders larger.</td>
-    </tr>
-    <tr>
-        <td class="lobster">Century Gothic</td>
-        <td class="lobster">This font is popular for headlines but not advised for main text.</td>
-    </tr>
-    <tr>
-        <td class="lobster">Lucida Sans Unicode</td>
-        <td class="lobster">This Lucida family of fonts is best known for its use in Macs.</td>
+        <td class="palatino">Palatino Linotype</td>
+        <td class="palatino">This is a serif font inspired by Renaissance lettering.</td>
     </tr>
 
     <tr>
-        <td class="lobster">Palatino Linotype</td>
-        <td class="lobster">This is a fun curvy font.</td>
-    </tr>
-
-    <tr>
-        <td class="lobster">Comic Sans</td>
-        <td class="lobster">This is a fun curvy font.</td>
+        <td class="comicsans">Comic Sans</td>
+        <td class="comicsans">This is an informal font that should be used only in lighthearted sites.</td>
     </tr>
     <tr>
         <td class="lobster">Lobster</td>
